# termial-random

./: .gitignore  .thoth.yaml  CHANGELOG.md  OWNERS  Pipfile  README.rst  _custom_build.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
termial_random/: __init__.py  __init__.pyi  random.c
tests/: test_random_termial.py
